--- a/src/editor.html
+++ b/src/editor.html
@@ -19,22 +19,6 @@
       </div>
       <div class="button-groups col"></div>
     </div>
-    <script type="text/javascript">
-      // Initialize the equation editor
-      const params = new URLSearchParams(window.location.search);
-      const existingLatex = params.get('existingLatex') || '';
-
-      const equationEditor = new EquationEditor.EquationEditorView({
-        $el: $('.equation-editor'),
-        existingLatex: existingLatex,
-        restrictions: {},
-      }).render();
-
-      // Pass the LaTeX back to CKEditor5 when done
-      window.onclose = () => {
-        const latex = equationEditor.input().mathquill('latex');
-        window.parent.postMessage({ latex }, '*');
-      };
-    </script>
+    <script type="module" src="editor/entry.ts"></script>
   </body>
 </html>
