--- a/src/editor.html
+++ b/src/editor.html
@@ -19,6 +19,6 @@
       </div>
       <div class="button-groups col"></div>
     </div>
-    <script type="module" src="editor/entry.ts"></script>
+    <script type="module" src="editor.ts"></script>
   </body>
 </html>
