Initial attempt to upgrade mathquill

--- a/src/editor.html
+++ b/src/editor.html
@@ -5,9 +5,15 @@
       type="text/javascript"
       src="//code.jquery.com/jquery-2.1.1.js"
     ></script>
-    <script type="text/javascript" src="js/mathquill.min.js"></script>
-
-    <link rel="stylesheet" type="text/css" href="mathquill.css" />
+    <script
+      type="text/javascript"
+      src="https://cdnjs.cloudflare.com/ajax/libs/mathquill/0.10.1/mathquill.min.js"
+    ></script>
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="https://cdnjs.cloudflare.com/ajax/libs/mathquill/0.10.1/mathquill.min.css"
+    />
     <link rel="stylesheet" type="text/css" href="equation_editor.css" />
   </head>
   <body class="equation-editor">
